--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,6 +82,11 @@ jobs:
           cat ./public/config.json
           cat ../cypress.json
 
+      - name: Sleep for 60 seconds
+        uses: jakejarvis/wait-action@master
+        with:
+          time: '60s'
+
       - name: Run cypress on sasjs
         run: |
           ss -lntu
