--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,17 +22,17 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: npm
 
-      - name: Check npm audit
-        run: npm audit --production --audit-level=low
+      # - name: Check npm audit
+      #   run: npm audit --production --audit-level=low
 
       - name: Install Dependencies
         run: npm ci
 
-      - name: Check code style
-        run: npm run lint
+      # - name: Check code style
+      #   run: npm run lint
 
-      - name: Run unit tests
-        run: npm test
+      # - name: Run unit tests
+      #   run: npm test
 
       - name: Build Package
         run: npm run package:lib
