--- a/.github/workflows/assign-reviewer.yml
+++ b/.github/workflows/assign-reviewer.yml
@@ -10,4 +10,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: uesteibar/reviewer-lottery@v1
         with:
-          repo-token: ${{ secrets.GH_TOKEN }}
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
