--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "pem": "1.14.5",
     "prettier": "2.8.7",
     "process": "0.11.10",
-    "rimraf": "3.0.2",
+    "rimraf": "^6.0.1",
     "semantic-release": "19.0.3",
     "terser-webpack-plugin": "5.3.6",
     "ts-jest": "27.1.3",
