--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,7 +63,7 @@ jobs:
           sudo apt install openvpn3
 
       - name: Start Open VPN 3
-        run: sudo nohup openvpn3 session-start --config .github/vpn/config.ovpn &
+        run: openvpn3 session-start --config .github/vpn/config.ovpn
 
       - name: install pm2
         run: npm i -g pm2
