--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
+      - name: Install Rimraf
+        run: npm i rimraf
+
       - name: Check code style
         run: npm run lint
 
