--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   "devDependencies": {
     "@cypress/webpack-preprocessor": "5.9.1",
     "@types/express": "4.17.13",
-    "@types/jest": "27.4.0",
+    "@types/jest": "29.5.14",
     "@types/mime": "2.0.3",
     "@types/pem": "1.9.6",
     "@types/tough-cookie": "4.0.2",
@@ -55,8 +55,9 @@
     "cypress": "7.7.0",
     "dotenv": "16.0.0",
     "express": "4.17.3",
-    "jest": "27.4.7",
-    "jest-extended": "2.0.0",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-extended": "4.0.2",
     "node-polyfill-webpack-plugin": "1.1.4",
     "path": "0.12.7",
     "pem": "1.14.5",
@@ -64,13 +65,13 @@
     "process": "0.11.10",
     "semantic-release": "19.0.3",
     "terser-webpack-plugin": "5.3.6",
-    "ts-jest": "27.1.3",
+    "ts-jest": "29.2.6",
     "ts-loader": "9.4.0",
     "tslint": "6.1.3",
     "tslint-config-prettier": "1.18.0",
     "typedoc": "0.23.24",
     "typedoc-plugin-rename-defaults": "0.6.4",
-    "typescript": "4.8.3",
+    "typescript": "4.9.5",
     "webpack": "5.76.2",
     "webpack-cli": "4.9.2"
   },
