--- a/package.json
+++ b/package.json
@@ -45,12 +45,14 @@
   "license": "ISC",
   "devDependencies": {
     "@cypress/webpack-preprocessor": "5.9.1",
+    "@types/cors": "^2.8.17",
     "@types/express": "4.17.13",
     "@types/jest": "29.5.14",
     "@types/mime": "2.0.3",
     "@types/pem": "1.9.6",
     "@types/tough-cookie": "4.0.2",
     "copyfiles": "2.4.1",
+    "cors": "^2.8.5",
     "cp": "0.2.0",
     "cypress": "7.7.0",
     "dotenv": "16.0.0",
