fix: new axios requires form data content type, es6 strict issues with iterations

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "esModuleInterop": true,
     "strict": true,
     "sourceMap": true,
+    "inlineSources": true,
     "typeRoots": ["./node_modules/@types", "./src/types/system"]
   },
   "include": ["src"],
