--- a/package.json
+++ b/package.json
@@ -4,17 +4,14 @@
   "homepage": "https://adapter.sasjs.io",
   "scripts": {
     "nodeVersionMessage": "echo \u001b[33m make sure you are running node lts version \u001b[0m",
-    "preinstall": "npm run nodeVersionMessage",
-    "prebuild": "npm run nodeVersionMessage",
-    "build": "npx rimraf build && npx rimraf node && mkdir node && copyfiles -u 1 \"./src/**/*\" ./node && webpack && npx rimraf build/src && npx rimraf node",
+    "build": "npm run nodeVersionMessage && npx rimraf build && npx rimraf node && mkdir node && copyfiles -u 1 \"./src/**/*\" ./node && webpack && npx rimraf build/src && npx rimraf node",
     "package:lib": "npm run build && copyfiles ./package.json build && cd build && npm version \"5.0.0\" && npm pack",
     "publish:lib": "npm run build && cd build && npm publish",
     "lint:fix": "npx prettier --loglevel silent --write \"src/**/*.{ts,tsx,js,jsx,html,css,sass,less,json,yml,md,graphql}\" && npx prettier --loglevel silent --write \"sasjs-tests/src/**/*.{ts,tsx,js,jsx,html,css,sass,less,json,yml,md,graphql}\" && npx prettier --loglevel silent --write \"cypress/**/*.{ts,tsx,js,jsx,html,css,sass,less,json,yml,md,graphql}\"",
     "lint": "npx prettier --check \"src/**/*.{ts,tsx,js,jsx,html,css,sass,less,json,yml,md,graphql}\" && npx prettier --check \"sasjs-tests/src/**/*.{ts,tsx,js,jsx,html,css,sass,less,json,yml,md,graphql}\" && npx prettier --check \"cypress/**/*.{ts,tsx,js,jsx,html,css,sass,less,json,yml,md,graphql}\"",
     "lint:silent": "npx prettier --loglevel silent --check \"src/**/*.{ts,tsx,js,jsx,html,css,sass,less,json,yml,md,graphql}\" && npx prettier --loglevel silent --check \"sasjs-tests/src/**/*.{ts,tsx,js,jsx,html,css,sass,less,json,yml,md,graphql}\" && npx prettier --loglevel silent --check \"cypress/**/*.{ts,tsx,js,jsx,html,css,sass,less,json,yml,md,graphql}\"",
     "test": "jest --silent --coverage",
-    "prepublishOnly": "cp -r ./build/* . && rm -rf ./build",
-    "postpublish": "git clean -fd",
+    "publishInit": "cp -r ./build/* . && rm -rf ./build",
     "semantic-release": "semantic-release",
     "typedoc": "node createTSDocs",
     "prepare": "git rev-parse --git-dir && git config core.hooksPath ./.git-hooks && git config core.autocrlf false || true",
@@ -79,7 +76,7 @@
   },
   "main": "index.js",
   "dependencies": {
-    "@sasjs/utils": "3.5.2",
+    "@sasjs/utils": "3.5.4",
     "axios": "1.12.2",
     "axios-cookiejar-support": "5.0.5",
     "form-data": "4.0.4",
