--- a/.github/workflows/build-unit-tests.yml
+++ b/.github/workflows/build-unit-tests.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [lts/hydrogen]
+        node-version: [lts/iron]
 
     steps:
       - uses: actions/checkout@v2
@@ -21,7 +21,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-       # 2. Restore npm cache manually
+        # 2. Restore npm cache manually
       - name: Restore npm cache
         uses: actions/cache@v3
         id: npm-cache
