--- a/.github/workflows/generateDocs.yml
+++ b/.github/workflows/generateDocs.yml
@@ -11,7 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [lts/hydrogen]
+        node-version: [lts/iron]
 
     steps:
       - name: Checkout
@@ -20,9 +20,10 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version:
+            ${{ matrix.node-version }}
 
-                 # 2. Restore npm cache manually
+            # 2. Restore npm cache manually
       - name: Restore npm cache
         uses: actions/cache@v3
         id: npm-cache
@@ -50,4 +51,3 @@ jobs:
           publish_branch: gh-pages
           publish_dir: ./docs
           cname: adapter.sasjs.io
-
