chore: ci fix, package-lock regen

--- a/.github/workflows/server-tests.yml
+++ b/.github/workflows/server-tests.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           path: |
             ~/.npm
-            ~/.cypress/Cypress
+            ~/.cache/Cypress
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
