fix(build): install cypress binary and cache only in relevant pipeline

--- a/.github/workflows/build-unit-tests.yml
+++ b/.github/workflows/build-unit-tests.yml
@@ -21,14 +21,12 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-        # 2. Restore npm and cypress cache manually
-      - name: Restore npm and cypress cache
+        # 2. Restore npm cache manually
+      - name: Restore npm cache
         uses: actions/cache@v3
         id: npm-cache
         with:
-          path: |
-            ~/.npm
-            ~/.cypress/Cypress
+          path: ~/.npm
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
