--- a/.github/workflows/server-tests.yml
+++ b/.github/workflows/server-tests.yml
@@ -21,20 +21,30 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      # 2. Restore npm and cypress cache manually
-      - name: Restore npm and cypress cache
+      # 2. Restore npm cache manually
+      - name: Restore npm cache
         uses: actions/cache@v3
         id: npm-cache
         with:
           path: |
             ~/.npm
-            ~/.cache/Cypress
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
 
+      - name: Cache Cypress binary
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/Cypress
+          key: cypress-${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            cypress-${{ runner.os }}-
+
       - name: Install Dependencies
         run: npm ci
+
+      - name: Install Cypress binary
+        run: npx cypress install
 
       - name: Install Rimraf
         run: npm i rimraf
